--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -2,6 +2,7 @@
 $dark-grey: #5D5F5D;
 $light-grey: #ECECEC;
 $light-headline-color: #FFFFFF;
+$light-paragraph-color: #ECECEC;
 
 // social media button colors
 $fb-blue: #3B5998;
