adds styling of application form

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -3,6 +3,8 @@ $dark-grey: #5D5F5D;
 $light-grey: #ECECEC;
 $light-headline-color: #FFFFFF;
 $light-paragraph-color: #ECECEC;
+$error-red: #FF0000;
+$success-green: #1A8753;
 
 // social media button colors
 $fb-blue: #3B5998;
@@ -15,5 +17,6 @@ $box-shadow: 0px 3px 12px;
 $box-shadow-hover: 0px 3px 20px;
 
 // fonts
+$font-family-general: "Montserrat", sans-serif;
 $font-family-headline: "Bebas Neue", sans-serif;
 
