--- a/client/src/scss/_footer.scss
+++ b/client/src/scss/_footer.scss
@@ -3,6 +3,7 @@
 footer {
     background-color: variables.$light-grey;
     padding: 3rem;
+    margin-top: 100px;
 
     img {
         margin: 0 1rem 1rem 1rem;
