--- a/client/src/scss/custom.scss
+++ b/client/src/scss/custom.scss
@@ -14,18 +14,30 @@ $theme-colors: (
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
 body {
-    color: variables.$light-paragraph-color;
-    background-color: variables.$dark-grey;
     font-family: variables.$font-family-general;
     text-align: center;
     height: 100vh;
     width: 100vw;
     margin: 0 auto;
     padding: 0;
+
+    .mainContent {
+        min-height: 72vh;
+        padding-top: 75px;
+    }
+}
+
+.dark-bg-color {
+    color: variables.$light-paragraph-color;
+    background-color: variables.$dark-grey;
+}
+
+.light-bg-color {
+    color: variables.$dark-grey;
+    background-color: variables.$light-paragraph-color;
 }
 
 h1 {
-    color: variables.$light-headline-color;
     font-size: 5rem;
     font-family: variables.$font-family-headline;
 }
@@ -45,5 +57,3 @@ button {
     font-weight: 500;
     font-size: 21px;
 }
-
-
