--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 // general colors
 $dark-grey: #5D5F5D;
 $light-grey: #ECECEC;
+$mid-grey: #D9D9D9;
 $light-headline-color: #FFFFFF;
 $light-paragraph-color: #ECECEC;
 $error-red: #FF0000;
@@ -19,3 +20,7 @@ $box-shadow-hover: 0px 3px 20px;
 // fonts
 $font-family-general: "Montserrat", sans-serif;
 $font-family-headline: "Bebas Neue", sans-serif;
+
+// layout
+$min-height: 72vh; // to display footer at the bottom of the page
+$main-content-padding-top: 75px;
