--- a/client/src/scss/_intranet.scss
+++ b/client/src/scss/_intranet.scss
@@ -12,4 +12,21 @@
             margin-left: 30px;
         }
     }
+
+    .mainContent {
+        width: 90%;
+        margin: auto;
+
+        table {
+            margin-top: 25px;
+
+            i {
+                color: variables.$tmm-red;
+            }
+
+            td:hover {
+                cursor: pointer;
+            }
+        }
+    }
 }
