makes minor adjustments

--- a/client/src/scss/_footer.scss
+++ b/client/src/scss/_footer.scss
@@ -1,5 +1,6 @@
 @use 'variables'; // contains variables for the web page
 
+// footer styles
 footer {
     background-color: variables.$light-grey;
     padding: 3rem;
