--- a/client/src/scss/custom.scss
+++ b/client/src/scss/custom.scss
@@ -14,6 +14,7 @@ $theme-colors: (
 // import Bootstrap SCSS
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
+// general styles
 body {
     font-family: variables.$font-family-general;
     text-align: center;
